Canvas is default now. Fixed some bugs of rotation. Chapter Overview should have a fixed size now. Scrollbars now work correct with rotation. New Icon for rotation.
git-svn-id: https://server.mycore.de/svn/mycore/trunk@26617 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/mycore-iview2/src/main/resources/components/iview2/web/modules/iview2/gfx/default/iview2.toolbar.css
+++ b/mycore-iview2/src/main/resources/components/iview2/web/modules/iview2/gfx/default/iview2.toolbar.css
@@ -89,7 +89,7 @@
 .iview2-icon-close { background-position: 0 0 !important; }
 .iview2-icon-empty { background-position: 30 0 !important; width:0px !important; }
 .iview2-icon-pdf { background-position: -450px 0 !important; }
-
+.iview2-icon-rotate { background-position: -480px 0 !important; }
 
 /* states and images */
 .iview2-icon { display: block !important; text-indent: -99999px !important; overflow: hidden !important; background-repeat: no-repeat !important; }
