--- a/mycore-iview2/src/main/resources/components/iview2/web/modules/iview2/gfx/default/style.css
+++ b/mycore-iview2/src/main/resources/components/iview2/web/modules/iview2/gfx/default/style.css
@@ -477,6 +477,9 @@
 	opacity: 0.85;
 }
 
+.chapter div.content{
+	min-height: 200px;
+}
 
 /* chapter Sort Button */
 .chapter .chapSort {
